services/rsc/admin/after.yaml
# values.yaml de secours

# Configuration des ports (on garde vos ports admin)
ports:
  web:
    port: 8000
    exposedPort: 80
  websecure:
    port: 8443
    exposedPort: 443
  http-admin:
    port: 9000
    expose:
      default: false
  https-admin:
    port: 9443
    expose:
      default: false

# CHANGEMENT CRITIQUE : Passez en ClusterIP pour ne pas déclencher kube-vip/metallb
service:
  enabled: true
  type: ClusterIP # <--- On ne demande plus d'IP externe à Helm
  annotations: {} # On vide les annotations problématiques
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-main-lb
  namespace: traefik
  annotations:
    kube-vip.io/loadbalancerIPs: "192.168.11.200" # IP LIBRE ET FIXE
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
    - name: web
      port: 80
      targetPort: 8000
    - name: websecure
      port: 443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-lb
  namespace: traefik
  annotations:
    kube-vip.io/loadbalancerIPs: "192.168.11.201" # AUTRE IP LIBRE
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
    - name: http-admin
      port: 80
      targetPort: 9000
    - name: https-admin
      port: 443
      targetPort: 9443












apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
  namespace: traefik
  annotations:
    kube-vip.io/loadbalancerIPs: "192.168.14.2"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
    - name: http-admin
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: https-admin
      port: 9443
      targetPort: 9443
      protocol: TCP


 Configure entrypoints
ports:
  # Service entrypoints
  web:
    http:
      redirections:
        entryPoint:
          to: websecure
          scheme: https
  
  websecure: {}

  # Admin entry points with redirect
  http-admin:
    port: 9000
    expose:
      default: false
    http:
      redirections:
        entryPoint:
          to: https-admin
          scheme: https
  
  https-admin:
    port: 9443
    expose:
      default: false

# Main service
service:
  enabled: true
  type: LoadBalancer
  annotations:
    kube-vip.io/loadbalancerIPs: "192.168.14.1"

ingressRoute:
  dashboard:
    enabled: false

# Default TLS certificate
tlsStore:
  default:
    defaultCertificate:
      secretName: tls-svc-lab-ln
