services/rsc/admin/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-service
  namespace: traefik
spec:
  type: ClusterIP
  externalIPs:
    - <admin_ip>
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik 
  ports:
    - name: http-admin
      port: 80          # External port (Host)
      targetPort: 9000  # Internal port (Container)
    - name: https-admin
      port: 443         # External port (Host)
      targetPort: 9443  # Internal port (Container)
