services/rsc/admin/traefik-svc-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-service
  namespace: admin
  annotations:
      metallb.universe.tf/loadBalancerIPs: "admin_vip"
spec:
  type: ClusterIP
  externalIPs:
    - admin_vip
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik 
  ports:
    - name: http-admin
      port: 80          # External port (Host)
      targetPort: 9000  # Internal port (Container)
    - name: https-admin
      port: 443         # External port (Host)
      targetPort: 9443  # Internal port (Container)
