services/rsc/admin/admin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admin-ingress
  namespace: admin
spec:
  entryPoints:
    - https-admin
  routes:
    - match: Host(`k8s.lab.ln`)
      kind: Rule
      services:
        - name: admin-service
          port: 80
  tls:
    secretName: tls-admin-lab-ln
    stores:
      - name: admin
