services/rsc/admin/ingress-longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - https-admin
  routes:
    - match: Host(`longhorn.k8s.lab.ln`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls: {}
