services/rsc/admin/ingress-traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-root-to-dashboard
  namespace: admin
spec:
  redirectRegex:
    regex: "^(https?://[^/]+)/?$"
    replacement: "${1}/dashboard/"
    permanent: true

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: admin
spec:
  entryPoints:
    - https-admin
  routes:
    - match: Host(`traefik.k8s.lab.ln`)
      kind: Rule
      middlewares:
        - name: redirect-root-to-dashboard
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: tls-admin-lab-ln
